src/test/resources/semantic/accept/returnValue.ul
void main() {
}

string foo() {
    return "string";
}

int bar() {
    return 54;
}

void buzz() {
    return;
}
