src/test/resources/semantic/reject/undefinedFunctionReturn.ul
void main() {
}

int foo() {
    return bar();
}

